--- a/client/src/app/sign-up/sign-up.component.html
+++ b/client/src/app/sign-up/sign-up.component.html
@@ -20,6 +20,9 @@
         <input matInput placeholder="E-mail" [formControl]="email" type="email" email name="email"
           autocomplete="username email" />
       </mat-form-field>
+      <mat-form-field>
+        <input matInput placeholder="Password" [formControl]="password" type="password" name="password" />
+      </mat-form-field>
     </form>
   </mat-card-content>
 
